--- a/public/about.html
+++ b/public/about.html
@@ -107,6 +107,24 @@
     I am still gainfully employed while I pursue this new endeavor.  There's no doubt I'm an 
     old dog, but I definitely know how to learn new tricks!
   </p>
+  <hr>
+  <h2>My Family</h2>
+  <img src="../assets/images/StraderFam.jpg" height="300" />
+  <p>
+    Riley's wedding to Katie.  From left to right:
+    <ol>
+      <li>Maverick (Dani's boyfriend)</li>
+      <li>Dani</li>
+      <li>Me</li>
+      <li>Katie (Riley's wife)</li>
+      <li>Riley</li>
+      <li>Christine</li>
+      <li>Cameron</li>
+      <li>Brittney</li>
+      <li>Daniel (Brittney's husband)</li>
+      <li>David</li>
+    </ol>
+  </p>
   <footer>
     <small>
       Copyright © 2024 Brad Strader Dev. All Rights Reserved.
