--- a/public/about.html
+++ b/public/about.html
@@ -63,7 +63,7 @@
     Syndrome.  We knew very little about this genetic disorder but jumped in with both feet 
     to learn.  He was a very happy baby, and to this day, is still a very happy person.  But, 
     he had a lot of health challenges that delayed his development, which is typical for a 
-    person with Down Syndrome.  For instance, he has had cataract surger and open heart surgery, 
+    person with Down Syndrome.  For instance, he has had cataract surgery and open heart surgery, 
     to name a few.  He was a challenge to raise but he was and is very rewarding.  
   </p>
   <p>
