--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <h2>Education</h2>
     <p>
         WEB DEVELOPER
-        <br>Tentative Completion Date: Jun 2024
+        <br>Tentative Completion Date: Dec 2024
         <br>Full Stack Developer
         <br><a href="https://www.udemy.com">Udemy.com</a>
-        <br>HTML 5, CSS 3, FlexBox, GRID, Bootstrap, Web Design, DOM, 
+        <br>HTML 5, CSS 3 (including FlexBox, GRID, & Bootstrap), Web Design, DOM, 
         JavaScript ES6, REACT.js, GitHub, NODE.js, Express.js, RESTful APIs, EJS, 
         RDBMS, MS SQL Server, PostgreSQL, OAuth 2.0, WEB3, NFTs
     </p>
