--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li>Manage water resources for deliveries</li>
             <li>Coordinate with water partners to increase water available to RWCD and decrease cost of water
             <li>Institute policies to improve efficiency and reduce cost</li>
-            <li>Manage use of technology to increase internet presences and customers’ satisfaction</li>
+            <li>Manage use of technology to increase internet presence and customers’ satisfaction</li>
         </ul>
     </p>
     <br>
