--- a/public/about.html
+++ b/public/about.html
@@ -111,7 +111,7 @@
   <h2>My Family</h2>
   <img src="../assets/images/StraderFam.jpg" height="300" />
   <p>
-    Riley's wedding to Katie.  From left to right:
+    Riley and Katie's wedding.  From left to right:
     <ol>
       <li>Maverick (Dani's boyfriend)</li>
       <li>Dani</li>
